--- a/Listados/.listadoViandas.html
+++ b/Listados/.listadoViandas.html
@@ -49,7 +49,7 @@
         Mostrar todas las viandas
       </h4>
       <p>
-         <button class="button button2" type='submit'>Consulta</button>
+        <input type='submit' value='CONSULTAR'>
       </p>
     </form>
 
@@ -66,7 +66,7 @@
         </font>
       </p>
       <p>
-         <button class="button button2" type='submit'>Consulta</button>
+        <input type='submit' value='CONSULTAR'>
       </p>
     </form>
 
